--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Eco Food</title>
-	<link rel="Stylesheet" href="css/style.css">
+	<link rel="stylesheet" type ="text/css" href="css/style.css">
+
+	
 </head>
 <body>
 	<header>	
