--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
 	
 </head>
 <body>
-	<header>	
-		<a href="#"><img src="img/logo.png" alt="logo"></a>
-		<section>
-			<a href="#">Login</a>
-			<a href="#">Cart(<span>0</span>)</a>
-			<button>Clear cart</button>
+	<div class="wrapper">
+		<header>	
+				<a href="#"><img src="img/logo.png" alt="logo"></a>
+			<section>
+			<a href="#" class="button">Login</a>
+			<a href="#" class="link">Cart(<span>0</span>)</a>
+			<button class="button">Clear cart</button>
 		</section>		
 		<nav>
-			<a href="#">Home</a>
+			<a href="#">Homes</a>
 			<a href="#">Catalog</a>
 			<a href="#">About us</a>
 			<a href="#">Contact</a>
@@ -40,7 +41,7 @@
 								<img src="img/lemon.jpg" alt="lemon">
 								<h3>Lemon</h3>
 								<p>$7</p>
-								<button> Add to cart</button> 
+								<button class="button"> Add to cart</button> 
 							</article> 
 						</section>	
 						<section>
@@ -48,7 +49,7 @@
 								<img src="img/cauliflower.jpg" alt="Cauliflower">
 								<h3>Cauliflower</h3>
 								<p>$1.2</p>
-								<button> Add to cart</button> 
+								<button class="button"> Add to cart</button> 
 							</article> 		
 						</section>	
 						<section>
@@ -56,7 +57,7 @@
 								<img src="img/corn.jpg" alt="Corn">
 								<h3>Corn</h3>
 								<p>$2</p>
-								<button> Add to cart</button> 
+								<button class="button"> Add to cart</button> 
 							</article> 		
 						</section>
 					</section>
@@ -67,7 +68,7 @@
 									<img src="img/cucumber.jpg" alt="Cucumber">
 									<h3>Cucumber</h3>
 									<p>$4.5</p>
-									<button> Add to cart</button> 
+									<button class="button"> Add to cart</button> 
 								</article> 		
 							</section> 
 
@@ -76,7 +77,7 @@
 									<img src="img/kiwi.jpg" alt="Kiwi">
 									<h3>Kiwi</h3>
 									<p>$10</p>
-									<button> Add to cart</button> 
+									<button class="button"> Add to cart</button> 
 								</article> 	
 							</section>	
 
@@ -85,7 +86,7 @@
 									<img src="img/lime.jpg" alt="Lime">
 									<h3>Lime</h3>
 									<p>$9.6</p>
-									<button> Add to cart</button> 
+									<button class="button"> Add to cart</button> 
 								</article> 		
 							</section>
 						</section>
@@ -96,7 +97,7 @@
 									<img src="img/peach.jpg" alt="Peach">
 									<h3>Peach</h3>
 									<p>$15.5</p>
-									<button> Add to cart</button> 
+									<button class="button"> Add to cart</button> 
 								</article> 	
 							</section>
 							<section>	
@@ -104,7 +105,7 @@
 									<img src="img/pumpkin.jpg" alt="Pumpkin">
 									<h3>Pumpkin</h3>
 									<p>$3.33</p>
-									<button> Add to cart</button> 
+									<button  class="button"> Add to cart</button> 
 								</article> 		
 							</section>	
 						</section>	
@@ -170,7 +171,8 @@
 			<a href="instagram.com">instagram</a>
 		</section>
 		<p> &copy; All rights reserved. </p>
-	</footer>
+	  </footer>
 
+	</div>
 </body>
 </html>
